ibm/k8s/overlays/roks/ingress-roks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmomax
  annotations:
    kubernetes.io/ingress.class: "openshift-default"
