ibm/k8s/overlays/roks/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pmomax
  labels:
    app.kubernetes.io/name: pmomax
spec:
  to:
    kind: Service
    name: pmomax
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
